tests/js/valid/enum/parses/type-6.buri
Hello = .hello(--comment
--comment
Int--comment
--comment
,--comment
--comment
[Str]--comment
--comment
)--comment