tests/js/invalid/function/mismatched-types-5.buri
func: (Int) => Int = (a) => a
hello: Str = func(1)